finishes form and view

--- a/app/index-async.html
+++ b/app/index-async.html
@@ -42,7 +42,12 @@ p=a("$injector","invoke","push",k),h={_invokeQueue:f,_configBlocks:k,_runBlocks:
       'welcome/welcome.component.js',
       'new-profile/new-profile.module.js',
       'new-profile/new-profile.component.js',
-      'new-profile/sub-routes/basic-info.component.js'
+      'new-profile/sub-routes/basic-info.component.js',
+      'new-profile/sub-routes/sports.component.js',
+      'new-profile/sub-routes/about.component.js',
+      'new-profile/sub-routes/review.component.js',
+      'core/core.module.js',
+      'core/profile.factory.js',
     ], function() {
       // when all is done, execute bootstrap AngularJS application
       angular.bootstrap(document, ['myApp']);
