connect front-end to endpoints

--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,8 @@ p=a("$injector","invoke","push",k),h={_invokeQueue:f,_configBlocks:k,_runBlocks:
       'new-profile/sub-routes/review.component.js',
       'core/core.module.js',
       'core/profile.factory.js',
+      'players/players.module.js',
+      'players/players.component.js',
     ], function() {
       // when all is done, execute bootstrap AngularJS application
       angular.bootstrap(document, ['myApp']);
