--- a/app/new-profile/sub-routes/basic-info.template.html
+++ b/app/new-profile/sub-routes/basic-info.template.html
@@ -2,7 +2,7 @@
 	<h3 class="text-center">Basic information {{fullNameVal}}</h3>
 	  <div class="form-group">
 		<label for="inputFullName">Full Name</label>
-		<input ng-model="fullName" type="text" class="form-control" id="inputFullName" placeholder="Enter full name">
+		<input ng-model="name" type="text" class="form-control" id="inputFullName" placeholder="Enter full name">
 	  </div>
 
 	  <div class="form-group">
