--- a/app/welcome/welcome.template.html
+++ b/app/welcome/welcome.template.html
@@ -4,7 +4,7 @@
 			<a ui-sref="newProfile.basic" class="btn btn-primary mb-2">NEW PROFILE</a>
 		</div>
 		<div class="col-6">
-			<a ui-sref="" class="btn btn-primary mb-2">GET PROFILES</a>
+			<a ui-sref="players" class="btn btn-primary mb-2">GET PROFILES</a>
 		</div>
 	</div>
 </div>
