--- a/app/new-profile/sub-routes/basic-info.template.html
+++ b/app/new-profile/sub-routes/basic-info.template.html
@@ -7,7 +7,7 @@
 
 	  <div class="form-group">
 		<label for="inputDOB">Date of birth</label>
-		<input ng-model="dob" type="text" class="form-control" id="inputDOB" placeholder="Password">
+		<input ng-model="dob" type="text" class="form-control" id="inputDOB" placeholder="">
 	  </div>
 
 	  <div class="form-group">
