--- a/app/players/players.template.html
+++ b/app/players/players.template.html
@@ -2,6 +2,10 @@
 	<ul>
 		<li ng-repeat="player in players">
 			<p>name: {{player.name}}</p>
+			<p>nationality: {{player.nationality}}</p>
+			<p>gender: {{player.gender}}</p>
 		</li>
 	</ul>
+
+	<a ui-sref="welcome" class="btn btn-primary mb-2 ">GO HOME</a>
 </div>
